src/snapshots/matcha__scanner__test__scan_dot_access.snap
---
source: src/scanner.rs
expression: "Hello{% if user.is_admin %} Admin{% endif %}"
---
[
    (
        Text(
            "Hello",
        ),
        0..5,
    ),
    (
        OpenStmt,
        5..6,
    ),
    (
        If,
        8..10,
    ),
    (
        GleamTokenOrIdentifier(
            "user.is_admin",
        ),
        11..24,
    ),
    (
        CloseStmt,
        25..26,
    ),
    (
        Text(
            " Admin",
        ),
        27..33,
    ),
    (
        OpenStmt,
        33..34,
    ),
    (
        EndIf,
        36..41,
    ),
    (
        CloseStmt,
        42..43,
    ),
]
