src/snapshots/matcha__scanner__test__scan_for_as_loop.snap
---
source: src/scanner.rs
expression: "Hello {% for item as Item in list %}{{ item }}{% endfor %}"
---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenStmt,
        6..7,
    ),
    (
        For,
        9..12,
    ),
    (
        GleamTokenOrIdentifier(
            "item",
        ),
        13..17,
    ),
    (
        As,
        18..20,
    ),
    (
        GleamTokenOrIdentifier(
            "Item",
        ),
        21..25,
    ),
    (
        In,
        26..28,
    ),
    (
        GleamTokenOrIdentifier(
            "list",
        ),
        29..33,
    ),
    (
        CloseStmt,
        34..35,
    ),
    (
        OpenValue,
        36..37,
    ),
    (
        GleamTokenOrIdentifier(
            "item",
        ),
        39..43,
    ),
    (
        CloseValue,
        44..45,
    ),
    (
        OpenStmt,
        46..47,
    ),
    (
        EndFor,
        49..55,
    ),
    (
        CloseStmt,
        56..57,
    ),
]
