src/snapshots/matcha__scanner__test__scan_function_end.snap
---
source: src/scanner.rs
expression: "{> endfn\n"
---
[
    (
        OpenLine,
        0..1,
    ),
    (
        EndFn,
        3..8,
    ),
    (
        CloseLine,
        8..8,
    ),
]
