src/snapshots/matcha__scanner__test__scan_function_end_eof.snap
---
source: src/scanner.rs
expression: "{> endfn"
---
[
    (
        OpenLine,
        0..1,
    ),
    (
        EndFn,
        3..8,
    ),
    (
        CloseLine,
        0..0,
    ),
]
