src/snapshots/matcha__scanner__test__scan_function_whole.snap
---
source: src/scanner.rs
expression: "{> fn classes() -> String\nx y\n{> endfn\n"
---
[
    (
        OpenLine,
        0..1,
    ),
    (
        Fn,
        3..5,
    ),
    (
        GleamTokenOrIdentifier(
            "classes()",
        ),
        6..15,
    ),
    (
        GleamTokenOrIdentifier(
            "->",
        ),
        16..18,
    ),
    (
        GleamTokenOrIdentifier(
            "String",
        ),
        19..25,
    ),
    (
        CloseLine,
        25..25,
    ),
    (
        Text(
            "x y\n",
        ),
        26..30,
    ),
    (
        OpenLine,
        30..31,
    ),
    (
        EndFn,
        33..38,
    ),
    (
        CloseLine,
        38..38,
    ),
]
